// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colors should generate code snippet 1`] = `
Object {
  "code": "$red: #ff0000;
$green: #00ff00;
$blue: #0000ff;
$yellow: #ffff00;
$black: #000000;
$black-50: rgba(0, 0, 0, 0.5);
$white: #ffffff;",
  "language": "scss",
}
`;

exports[`Colors should generate exportable file 1`] = `
Object {
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2021 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

$red: #ff0000;
$green: #00ff00;
$blue: #0000ff;
$yellow: #ffff00;
$black: #000000;
$black-50: rgba(0, 0, 0, 0.5);
$white: #ffffff;",
  "filename": "colors.scss",
  "language": "scss",
}
`;

exports[`Layer \`Exportable layer\` should generate code snippet 1`] = `
Object {
  "code": ".Exportable-layer {
  width: 6.25rem;
  height: 6.25rem;
  margin: 1.25rem 1.25rem 0 3.125rem;
  object-fit: contain;
  background-color: $yellow;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with blur\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-blur {
  width: 6.25rem;
  height: 6.25rem;
  margin: 1.25rem 0.188rem 0 1.25rem;
  -webkit-filter: blur(10px);
  filter: blur(10px);
  background-color: #00ffff;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with border radius\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-border-radius {
  width: 6.25rem;
  height: 6.25rem;
  margin: 1.25rem 1.25rem 1.25rem 3.125rem;
  border-radius: 20px;
  background-color: $red;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with border\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-border {
  width: 6.25rem;
  height: 6.25rem;
  margin: 0 4.375rem 1.25rem 0;
  border: solid 2px $black;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with fill\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-fill {
  width: 6.25rem;
  height: 6.25rem;
  margin: 0 4.375rem 1.25rem 0;
  background-color: $blue;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with gradient border\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-gradient-border {
  width: 6.25rem;
  height: 6.25rem;
  margin: 1.25rem 4.375rem 4.375rem 0;
  border-style: solid;
  border-width: 6px;
  border-image-source: radial-gradient(circle at 50% 0, $red, rgba(255, 0, 0, 0) 89%);
  border-image-slice: 1;
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with gradient fill\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-gradient-fill {
  width: 6.25rem;
  height: 6.25rem;
  margin: 1.25rem 4.375rem 4.375rem 0;
  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), $black-50);
}",
  "language": "scss",
}
`;

exports[`Layer \`Layer with shadow\` should generate code snippet 1`] = `
Object {
  "code": ".Layer-with-shadow {
  width: 6.25rem;
  height: 6.25rem;
  margin: 4.375rem 1.25rem 1.25rem 3.125rem;
  box-shadow: 0 2px 4px 6px $black-50;
}",
  "language": "scss",
}
`;

exports[`Layer \`Rotated layer\` should generate code snippet 1`] = `
Object {
  "code": ".Rotated-layer {
  width: 6.438rem;
  height: 6.25rem;
  margin: 1.25rem 0 1.25rem 1.25rem;
  transform: rotate(45deg);
  background-color: $green;
}",
  "language": "scss",
}
`;

exports[`Layer \`Sample layer\` should generate code snippet 1`] = `
Object {
  "code": ".Sample-layer {
  width: 20rem;
  height: 48rem;
  padding: 0 2.938rem 8.625rem 0;
}",
  "language": "scss",
}
`;

exports[`Layer \`Text layer with multiple styles\` should generate code snippet 1`] = `
Object {
  "code": ".Text-layer-with-multiple-styles {
  width: 13.75rem;
  height: 1.5rem;
  margin: 1.25rem 3.313rem 3.25rem 0;
  @include Sample-text-style;
}

.Text-layer-with-multiple-styles .text-style-1 {
  font-family: SFProText;
  font-size: 1.25rem;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: $black;
}

.Text-layer-with-multiple-styles .text-style-2 {
  font-family: SFProText;
  font-size: 1.25rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: $red;
}",
  "language": "scss",
}
`;

exports[`Layer \`Text layer\` should generate code snippet 1`] = `
Object {
  "code": ".Text-layer {
  width: 13.75rem;
  height: 1.5rem;
  margin: 0 3.313rem 1.25rem 0;
  @include Sample-text-style;
}",
  "language": "scss",
}
`;

exports[`Layer \`Transparent layer with blend mode\` should generate code snippet 1`] = `
Object {
  "code": ".Transparent-layer-with-blend-mode {
  width: 6.438rem;
  height: 6.25rem;
  margin: 4.375rem 0 1.25rem 1.25rem;
  opacity: 0.3;
  mix-blend-mode: multiply;
  background-color: $green;
}",
  "language": "scss",
}
`;

exports[`Spacing should generate code snippet 1`] = `
Object {
  "code": "$base: 1rem;
$double: 2rem;
$half: 0.5rem;",
  "language": "scss",
}
`;

exports[`Spacing should generate exportable file 1`] = `
Object {
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2021 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

$base: 1rem;
$double: 2rem;
$half: 0.5rem;",
  "filename": "spacing.scss",
  "language": "scss",
}
`;

exports[`Text Styles should generate code snippet 1`] = `
Object {
  "code": "@font-face {
  font-family: SFProText;
  src: local(SFProText-Regular),
    url(/path/to/SFProText-Regular.woff2) format(\\"woff2\\"),
    url(/path/to/SFProText-Regular.woff) format(\\"woff\\"),
    url(/path/to/SFProText-Regular.ttf) format(\\"truetype\\");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

@mixin Sample-text-style-with-color {
  font-family: SFProText;
  font-size: 1.25rem;
  text-align: left;
  color: $red;
}

@mixin Sample-text-style {
  font-family: SFProText;
  font-size: 1.25rem;
  text-align: left;
  color: $black;
}",
  "language": "scss",
}
`;

exports[`Text Styles should generate exportable file 1`] = `
Object {
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2021 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@font-face {
  font-family: SFProText;
  src: local(SFProText-Regular),
    url(/path/to/SFProText-Regular.woff2) format(\\"woff2\\"),
    url(/path/to/SFProText-Regular.woff) format(\\"woff\\"),
    url(/path/to/SFProText-Regular.ttf) format(\\"truetype\\");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

@mixin Sample-text-style-with-color {
  font-family: SFProText;
  font-size: 1.25rem;
  text-align: left;
  color: $red;
}

@mixin Sample-text-style {
  font-family: SFProText;
  font-size: 1.25rem;
  text-align: left;
  color: $black;
}",
  "filename": "fonts.scss",
  "language": "scss",
}
`;
